@@ -15,6 +15,8 @@ the CVS logs is updated daily at the following URL:
 
 Version 4.99 (CVS HEAD)
 -----------------------
+
+ - Fix support for OFFSITE for simple greyscale rasters (bug 2024). 
  
  - [SLD] : Error on last class in raster class names based on the ColorMapEntry
            (bug 1844)
